Fixed overflow

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -6,7 +6,8 @@ $animation_length: 0.5s;
 $info_column_width: 300px;
 $header_height: 500px;
 
-html { height: 100%; }
+html { height: 100%; 
+       min-width: 600px;}
 
 body {
   overflow: scroll;
